<resources>
    <string name="app_name">Kim_J-Project4</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="new_account">New Account</string>
    <string name="sign_up_log_in">Sign Up / Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="age">Age</string>
    <string name="height_in">Height (in)</string>
    <string name="register_info">Register Info</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="tour_name">Tour Name</string>
    <string name="tour_description">Tour Description</string>
    <string name="save_tour">Save Tour</string>
    <string name="welcome">Welcome</string>
    <string name="web_link_optional">Web Link (Optional)</string>
    <string name="add_video_or_audio">Add Video or Audio</string>
    <string name="view_my_tours">View My Tours</string>
    <string name="save_edits">Save Edits</string>
    <string name="share">Share</string>
    <string name="share_tour">Share Tour</string>
    <string name="play_video">Play Video</string>
    <string name="play_audio">Play Audio</string>
    <string name="record_video">Record Video</string>
    <string name="record_audio">Record Audio</string>
</resources>