<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_below="@id/welcome_text"
        android:layout_margin="10dp" />

    <EditText
        android:id="@+id/tour_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/tour_name"
        android:layout_below="@id/map"
        android:layout_margin="5dp" />

    <EditText
        android:id="@+id/tour_description"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/tour_description"
        android:layout_below="@id/tour_name"
        android:layout_margin="5dp" />

    <EditText
        android:id="@+id/tour_link"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/web_link_optional"
        android:layout_below="@id/tour_description"
        android:layout_margin="5dp" />

    <Button
        android:id="@+id/add_media_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_video_or_audio"
        android:backgroundTint="#A696CF"
        android:layout_below="@id/tour_link"
        android:layout_margin="5dp"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_media_button"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/save_tour_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_tour"
            android:textStyle="bold"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/view_tours_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_my_tours"
            android:textStyle="bold"
            android:layout_marginStart="16dp" />
    </LinearLayout>

</RelativeLayout>
