<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/edit_tour_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/tour_name" />

    <EditText
        android:id="@+id/edit_tour_description"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/tour_description" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginTop="10dp" />

    <WebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="170dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/play_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_audio" />

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/play_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_video" />
    </LinearLayout>

    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/share_tour" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_edits" />
</LinearLayout>